--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,14 @@
   },
   "require-dev": {
     "guzzlehttp/promises": "0.1.1|^1.3",
-    "squizlabs/php_codesniffer": "^3.5",
     "phpunit/phpunit": "^7.5|^8.0"
   },
   "autoload": {
     "psr-4": {
       "Google\\Auth\\": "src/Auth",
       "Google\\Cache\\": "src/Cache",
-      "Google\\Http\\": "src/Http"
+      "Google\\Http\\": "src/Http",
+      "Google\\Jwt\\": "src/Jwt"
     }
   }
 }
