--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -4,6 +4,7 @@ return PhpCsFixer\Config::create()
     ->setRules([
         '@PhpCsFixer' => true,
         '@PSR2' => true,
+        'no_superfluous_phpdoc_tags' => false,
         'concat_space' => ['spacing' => 'one'],
         'no_unused_imports' => true,
         'ordered_imports' => true,
